feat: :lipstick: new files

--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
 <body>
     <header class="header__container">
         <div class="div__agua">
-            <h2>AQUA</h2> 
-            <img src="storage/img/gotagua.svg">
+            <h2>AQUA<img src="storage/img/gotagua.svg"></h2>
         </div>
         <div class="div__menu">
             <span>inicio</span>
             <span>como jugar</span>
             <span>apoyanos</span>
+            <span>sobre nosotros</span>
         </div>
         <div div__icons>
             <img src="storage/img/sol.svg">
             <img src="storage/img/sol.svg">
         </div>
     </header>
+
+
     <main class="texto">
         <div class="div__titulo">
             <img src="storage/img/crae.svg" alt="">
+            <img src="storage/img/perrito.svg" alt="">
         </div>
         <div class="div__espan">
             <span>somos creatividad,somos crae</span>
+            <p>crae es un juego de cartas inclusive donde personas videntes <br> no videntesy con discapacidad visual puedan participar y disfrutar en conjunto.</p>
         </div>
+    
     </main>
 </body>
 </html>
