feat: :construction: contrutuion css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             <span>somos creatividad,somos crae</span>
             <p>crae es un juego de cartas inclusive donde personas videntes <br> no videntesy con discapacidad visual puedan participar y disfrutar en conjunto.</p>
         </div>
+
+        <div class="intrucciones">
+            <div class="div__orden">
+            <h2>¿como jugar?</h2>
+            <p>crae posee una modalidad de juegos definidas <br>pero siempre apoyamos la creatividady que <br>crees tu propias reglas y modalidades</p>
+        </div>
+    </div>
     
     </main>
 </body>
